--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 .btn.catkit-ico {
-	font-size:12px; 
+	font-size:12px;
+	line-height:14px;
 	padding: 0;
-	width:20px;
-	height:20px;
+	width:16px;
+	height:16px;
 	display: inline-block;
 	cursor: pointer;
 	position: relative;
